--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # APP ID
-NEXT_PUBLIC_APP_ID=
+NEXT_PUBLIC_APP_ID='ad774ee9-84e5-42f1-9de2-70a25959a8c9'
 # APP API key
-NEXT_PUBLIC_APP_KEY=
+NEXT_PUBLIC_APP_KEY='app-MgHactnyGZBQdVQDu7K8zcsB'
 # API url prefix
-NEXT_PUBLIC_API_URL=
+NEXT_PUBLIC_API_URL='http://dify.castroecastroadvogados.com/v1'
 # APP type
 # true for workflow apps
 NEXT_PUBLIC_APP_TYPE_WORKFLOW=
